--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,38 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button:enabled{ 
+  cursor: pointer;
+}
+
+
+/* 1sr hw */
+.btn-wrapper {
+  max-width: 9rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 1rem;
+}
+
+.btn-wrapper button {
+  font-size: 16px;
+  max-width: 8rem;
+  padding: 4px 0;
+  border: none;
+  border-radius: 3px;
+  background-color: #fce2c2;
+  transition: all 400ms ease;
+  }
+
+.btn-wrapper button:enabled:hover {
+      background-color: #ffce93;
+      border-radius: 5px;
+      transform: scale( 1.1);
+    }
+
+
+
+    /* 2nd hw */
